@@ -1,5 +1,7 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Test for using Moose in components which have a non-Moose base class
+          Fixed by 349cda in Moose 0.79 (t0m)
         - Fix deprecation message for Catalyst::Dispatcher to refer
           to the class actually calling the deprecated method. RT#45741 (t0m)
         - Clarify limitations of $request->base and $request->secure.
